# task_1547

./: CMakeLists.txt  README.md
res/: input.txt
res/shaders/: fragment_shader.fs  vertex_shader.vs
src/: libbitmap.cpp  libbitmap.h  main.cpp
src/objects/: objects.cpp  objects.h
src/shader/: shader.cpp  shader.h
